Added tests with GoogleTests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,20 +5,38 @@ cmake_minimum_required(VERSION 3.0)
 file(GLOB_RECURSE HARBOR_LIB_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/*/*.cpp)
 list(SORT HARBOR_LIB_FILES)
 add_library(harbor_lib ${HARBOR_LIB_FILES})
-target_include_directories(harbor_lib PUBLIC src/)
+target_include_directories(harbor_lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src/)
 
-add_executable(harbor src/main.cpp)
-target_include_directories(harbor PUBLIC src/)
+add_executable(harbor ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp)
+target_include_directories(harbor PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src/)
 target_link_libraries(harbor PUBLIC harbor_lib)
+
+file(GLOB_RECURSE HARBOR_TEST_FILES ${CMAKE_CURRENT_SOURCE_DIR}/tests/*/*.cpp)
+list(SORT HARBOR_TEST_FILES)
+add_executable(run_tests ${HARBOR_TEST_FILES})
+target_include_directories(run_tests PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src/)
+target_link_libraries(run_tests PUBLIC harbor_lib)
+
+find_package(GTest)
+if(GTEST_FOUND)
+  message(STATUS "Using system libraries for GTest: ${GTEST_LIBRARIES}")
+  target_link_libraries(run_tests PUBLIC ${GTEST_BOTH_LIBRARIES} pthread)
+  target_include_directories(run_tests PUBLIC ${GTEST_INCLUDE_DIRS})
+else(GTEST_FOUND)
+  message(STATUS "Compiling GTest from source")
+  add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/external/gtest)
+  target_link_libraries(run_tests PUBLIC gtest gtest_main)
+  add_dependencies(run_tests gtest gtest_main)
+endif(GTEST_FOUND)
 
 find_package(SDL2)
 if(SDL2_FOUND)
   message(STATUS "Using system libraries for SDL2: ${SDL2_LIBRARIES}")
-  target_link_libraries(harbor_lib ${SDL2_LIBRARIES})
+  target_link_libraries(harbor_lib PUBLIC ${SDL2_LIBRARIES})
   target_include_directories(harbor_lib PUBLIC ${SDL2_INCLUDE_DIRS})
 else(SDL2_FOUND)
   message(STATUS "Compiling SDL2 from source")
   add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/external/SDL2)
-  target_link_libraries(harbor_lib SDL2)
+  target_link_libraries(harbor_lib PUBLIC SDL2)
   add_dependencies(harbor_lib SDL2)
 endif(SDL2_FOUND)
