--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,25 @@
-# Build files
+# Build Files
 build/
 build.*/
+**/CMakeFiles/
+**/CMakeCache.txt
+.clickable/
+Debug/
+Release/
+*.tmp
+
+# IDE files
+.vscode/
+language.settings.xml
+*.vs/
+
+# OS Files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+.directory
+*~
