Added textures with SDL_image

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,8 @@ set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/mk/cmake/")
+
 file(GLOB_RECURSE HARBOR_LIB_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/*/*.cpp)
 list(SORT HARBOR_LIB_FILES)
 add_library(harbor_lib ${HARBOR_LIB_FILES})
@@ -62,3 +64,15 @@ else(SDL2_FOUND)
   target_link_libraries(harbor_lib PUBLIC SDL2)
   add_dependencies(harbor_lib SDL2)
 endif(SDL2_FOUND)
+
+find_package(SDL2_image)
+if(SDL2_IMAGE_FOUND)
+  message(STATUS "Using system libraries for SDL2_image: ${SDL2_IMAGE_LIBRARIES}")
+  target_link_libraries(harbor_lib PUBLIC ${SDL2_IMAGE_LIBRARIES})
+  target_include_directories(harbor_lib PUBLIC ${SDL2_IMAGE_INCLUDE_DIRS})
+else(SDL2_IMAGE_FOUND)
+  message(STATUS "Compiling SDL2_image from source")
+  add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/external/SDL2_image)
+  target_link_libraries(harbor_lib PUBLIC SDL2_IMAGE)
+  add_dependencies(harbor_lib SDL2_IMAGE)
+endif(SDL2_IMAGE_FOUND)
