Added text support

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "external/SDL2_image"]
 	path = external/SDL2_image
 	url = https://github.com/libsdl-org/SDL_image.git
+[submodule "external/SDL2_ttf"]
+	path = external/SDL2_ttf
+	url = https://github.com/libsdl-org/SDL_ttf.git
