--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,3 +81,15 @@ else(SDL2_IMAGE_FOUND)
   target_link_libraries(harbor_lib PUBLIC SDL2_IMAGE)
   add_dependencies(harbor_lib SDL2_IMAGE)
 endif(SDL2_IMAGE_FOUND)
+
+find_package(SDL2_ttf)
+if(SDL2_TTF_FOUND)
+  message(STATUS "Using system libraries for SDL2_ttf: ${SDL2_TTF_LIBRARIES}")
+  target_link_libraries(harbor_lib PUBLIC ${SDL2_TTF_LIBRARIES})
+  target_include_directories(harbor_lib PUBLIC ${SDL2_TTF_INCLUDE_DIRS})
+else(SDL2_TTF_FOUND)
+  message(STATUS "Compiling SDL2_ttf from source")
+  add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/external/SDL2_ttf)
+  target_link_libraries(harbor_lib PUBLIC SDL2_ttf)
+  add_dependencies(harbor_lib SDL2_ttf)
+endif(SDL2_TTF_FOUND)
