Added options to not build the executable/tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,9 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/mk/cmake/")
 
+option(HARBOR_BUILD_EXEC "Build an executable directly" ON)
+option(HARBOR_BUILD_TEST "Build a test suite" ON)
+
 file(GLOB_RECURSE HARBOR_LIB_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/*/*.cpp)
 list(SORT HARBOR_LIB_FILES)
 add_library(harbor_lib ${HARBOR_LIB_FILES})
@@ -36,27 +39,33 @@ target_include_directories(harbor_lib PUBLIC
                           ${CMAKE_CURRENT_SOURCE_DIR}/src/
                           ${CMAKE_CURRENT_SOURCE_DIR}/polyfill/)
 
-add_executable(harbor ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp)
-target_include_directories(harbor PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src/)
-target_link_libraries(harbor PUBLIC harbor_lib)
+if(HARBOR_BUILD_EXEC)
+  add_executable(harbor ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp)
+  target_include_directories(harbor PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src/)
+  target_link_libraries(harbor PUBLIC harbor_lib)
+endif(HARBOR_BUILD_EXEC)
 
-file(GLOB_RECURSE HARBOR_TEST_FILES ${CMAKE_CURRENT_SOURCE_DIR}/tests/*/*.cpp)
-list(SORT HARBOR_TEST_FILES)
-add_executable(run_tests ${HARBOR_TEST_FILES})
-target_include_directories(run_tests PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src/)
-target_link_libraries(run_tests PUBLIC harbor_lib)
+if(HARBOR_BUILD_TEST)
+  file(GLOB_RECURSE HARBOR_TEST_FILES ${CMAKE_CURRENT_SOURCE_DIR}/tests/*/*.cpp)
+  list(SORT HARBOR_TEST_FILES)
+  add_executable(run_tests ${HARBOR_TEST_FILES})
+  target_include_directories(run_tests PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src/)
+  target_link_libraries(run_tests PUBLIC harbor_lib)
+endif(HARBOR_BUILD_TEST)
 
-find_package(GTest)
-if(GTEST_FOUND)
-  message(STATUS "Using system libraries for GTest: ${GTEST_LIBRARIES}")
-  target_link_libraries(run_tests PUBLIC ${GTEST_BOTH_LIBRARIES} pthread)
-  target_include_directories(run_tests PUBLIC ${GTEST_INCLUDE_DIRS})
-else(GTEST_FOUND)
-  message(STATUS "Compiling GTest from source")
-  add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/external/gtest)
-  target_link_libraries(run_tests PUBLIC gtest gtest_main)
-  add_dependencies(run_tests gtest gtest_main)
-endif(GTEST_FOUND)
+if(HARBOR_BUILD_TEST)
+  find_package(GTest)
+  if(GTEST_FOUND)
+    message(STATUS "Using system libraries for GTest: ${GTEST_LIBRARIES}")
+    target_link_libraries(run_tests PUBLIC ${GTEST_BOTH_LIBRARIES} pthread)
+    target_include_directories(run_tests PUBLIC ${GTEST_INCLUDE_DIRS})
+  else(GTEST_FOUND)
+    message(STATUS "Compiling GTest from source")
+    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/external/gtest)
+    target_link_libraries(run_tests PUBLIC gtest gtest_main)
+    add_dependencies(run_tests gtest gtest_main)
+  endif(GTEST_FOUND)
+endif(HARBOR_BUILD_TEST)
 
 find_package(SDL2)
 if(SDL2_FOUND)
