--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,6 +67,27 @@ if(HARBOR_BUILD_TEST)
   endif(GTEST_FOUND)
 endif(HARBOR_BUILD_TEST)
 
+find_package(Lua)
+if(LUA_FOUND)
+  message(STATUS "Using system libraries for LUA: ${LUA_LIBRARIES}")
+  target_link_libraries(harbor_lib PUBLIC ${LUA_LIBRARIES})
+  target_include_directories(harbor_lib PUBLIC ${LUA_INCLUDE_DIR})
+else(LUA_FOUND)
+  message(STATUS "Compiling LUA from source")
+  file(GLOB LUA_FILES_C ${CMAKE_CURRENT_SOURCE_DIR}/external/lua/l*.c)
+  list(SORT LUA_FILES_C)
+  add_library(lua_lib ${LUA_FILES_C})
+  add_dependencies(harbor_lib lua_lib)
+  target_link_libraries(harbor_lib PUBLIC lua_lib)
+  target_include_directories(harbor_lib PUBLIC
+                             ${CMAKE_CURRENT_SOURCE_DIR}/external/lua)
+  # Fixes link-time "loslib.c:(.text+0x168): warning: the use of `tmpnam' is
+  # dangerous, better use `mkstemp'" (by effectively doing said replacement)
+  if (UNIX)
+    set_target_properties(lua_lib PROPERTIES COMPILE_DEFINITIONS "LUA_USE_POSIX")
+  endif (UNIX)
+endif(LUA_FOUND)
+
 find_package(SDL2)
 if(SDL2_FOUND)
   message(STATUS "Using system libraries for SDL2: ${SDL2_LIBRARIES}")
@@ -102,3 +123,16 @@ else(SDL2_TTF_FOUND)
   target_link_libraries(harbor_lib PUBLIC SDL2_ttf)
   add_dependencies(harbor_lib SDL2_ttf)
 endif(SDL2_TTF_FOUND)
+
+# TODO
+#find_package(Squirrel)
+if(SQUIRREL_FOUND)
+  message(STATUS "Using system libraries for Squirrel: ${SQUIRREL_LIBRARIES}")
+  target_link_libraries(harbor_lib PUBLIC ${SQUIRREL_LIBRARIES})
+  target_include_directories(harbor_lib PUBLIC ${SQUIRREL_INCLUDE_DIRS})
+else(SQUIRREL_FOUND)
+  message(STATUS "Compiling Squirrel from source")
+  add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/external/squirrel)
+  target_link_libraries(harbor_lib PUBLIC squirrel)
+  add_dependencies(harbor_lib squirrel)
+endif(SQUIRREL_FOUND)
