Windows + vcpkg port

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,7 +40,7 @@ target_include_directories(harbor_lib PUBLIC
                           ${CMAKE_CURRENT_SOURCE_DIR}/polyfill/)
 
 if(HARBOR_BUILD_EXEC)
-  add_executable(harbor ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp)
+  add_executable(harbor WIN32 ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp)
   target_include_directories(harbor PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src/)
   target_link_libraries(harbor PUBLIC harbor_lib)
 endif(HARBOR_BUILD_EXEC)
@@ -70,7 +70,7 @@ endif(HARBOR_BUILD_TEST)
 find_package(SDL2)
 if(SDL2_FOUND)
   message(STATUS "Using system libraries for SDL2: ${SDL2_LIBRARIES}")
-  target_link_libraries(harbor_lib PUBLIC ${SDL2_LIBRARIES})
+  target_link_libraries(harbor_lib PUBLIC SDL2::SDL2 SDL2::SDL2main)
   target_include_directories(harbor_lib PUBLIC ${SDL2_INCLUDE_DIRS})
 else(SDL2_FOUND)
   message(STATUS "Compiling SDL2 from source")
@@ -79,26 +79,37 @@ else(SDL2_FOUND)
   add_dependencies(harbor_lib SDL2)
 endif(SDL2_FOUND)
 
-find_package(SDL2_image)
-if(SDL2_IMAGE_FOUND)
+find_package(sdl2-image)
+if(sdl2-image_FOUND)
   message(STATUS "Using system libraries for SDL2_image: ${SDL2_IMAGE_LIBRARIES}")
-  target_link_libraries(harbor_lib PUBLIC ${SDL2_IMAGE_LIBRARIES})
+  target_link_libraries(harbor_lib PUBLIC SDL2::SDL2_image)
   target_include_directories(harbor_lib PUBLIC ${SDL2_IMAGE_INCLUDE_DIRS})
-else(SDL2_IMAGE_FOUND)
+else(sdl2-image_FOUND)
   message(STATUS "Compiling SDL2_image from source")
   add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/external/SDL2_image)
-  target_link_libraries(harbor_lib PUBLIC SDL2_IMAGE)
-  add_dependencies(harbor_lib SDL2_IMAGE)
-endif(SDL2_IMAGE_FOUND)
+  target_link_libraries(harbor_lib PUBLIC SDL2_image)
+  add_dependencies(harbor_lib SDL2_image)
+endif(sdl2-image_FOUND)
 
-find_package(SDL2_ttf)
-if(SDL2_TTF_FOUND)
-  message(STATUS "Using system libraries for SDL2_ttf: ${SDL2_TTF_LIBRARIES}")
-  target_link_libraries(harbor_lib PUBLIC ${SDL2_TTF_LIBRARIES})
+find_package(sdl2-ttf)
+if(sdl2-ttf_FOUND)
+  message(STATUS "Using system libraries for SDL2_ttf: ${SDL2_TTF_LIBRARIES} ${SDL2_TTF_INCLUDE_DIRS}")
+  target_link_libraries(harbor_lib PUBLIC SDL2::SDL2_ttf)
   target_include_directories(harbor_lib PUBLIC ${SDL2_TTF_INCLUDE_DIRS})
-else(SDL2_TTF_FOUND)
+else(sdl2-ttf_FOUND)
   message(STATUS "Compiling SDL2_ttf from source")
+
+  # FIXME: Doesn't work (tm)
+  find_package(Freetype)
+  if(FREETYPE_FOUND)
+    message(STATUS "Using system libraries for Freetype: ${FREETYPE_LIBRARIES}")
+  else(FREETYPE_FOUND)
+    message(STATUS "Compiling Freetype from source")
+    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/external/freetype)
+    add_library(Freetype::Freetype ALIAS freetype)
+  endif(FREETYPE_FOUND)
+
   add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/external/SDL2_ttf)
   target_link_libraries(harbor_lib PUBLIC SDL2_ttf)
   add_dependencies(harbor_lib SDL2_ttf)
-endif(SDL2_TTF_FOUND)
+endif(sdl2-ttf_FOUND)
