--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "external/SDL2_ttf"]
 	path = external/SDL2_ttf
 	url = https://github.com/libsdl-org/SDL_ttf.git
+[submodule ".\\external\\freetype"]
+	path = .\\external\\freetype
+	url = https://gitlab.freedesktop.org/freetype/freetype.git
