Increased code quality & started platform support
DONE: Added WARNINGS and WERROR ("warnings -> errors") CMake options
DONE: Added Freetype, which was missing for source builds
TODO: Continue Windows port
TODO: Continue Emscripten (WebAssembly) port
TODO: Continue Clickable (Ubuntu Touch) port
TODO: Make ports for macOS, iOS, *BSD, Haiku, Android, and potentially other OSes (OS/2, etc.)
TODO: Make GitHub actions for all of those OSes, and for multiple architectures, and both for static and dynamic linking, and for cross-compiling (e. g. with MinGW on Linux), etc.
FIXME: It appears at the moment of writing this, VCPKG has a bug with Lua; CMake would freeze at "find_package(Lua)". It is therefore possible that GitHub builds for VCPKG will freeze as well.

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "external/lua"]
 	path = external/lua
 	url = https://github.com/lua/lua.git
+[submodule "external/freetype"]
+	path = external/freetype
+	url = https://gitlab.freedesktop.org/freetype/freetype
